.provarCaches/00D410000011HE0EAM/objects/rstk__appsecurity__c.object
<CustomObject>
    <description>appsecurity__c</description>
    <fields>
        <fullName>rstk__b_supitem__c</fullName>
        <label>B_SUPITEM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>NULL</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__launchpad_mrp__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Obsolete</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_BOL__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Bill of Lading</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_abcanalysis__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ABC Analysis</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_allocqtycheckandrepair__c</fullName>
        <description>m_allocqtycheckandrepair__c</description>
        <label>Allocated Quantity Integrity Check and R</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_approvers__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approvers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_authorizers__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Authorizers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_calculateABCcodes__c</fullName>
        <label>Calculate ABC Codes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_carriercodes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Carriers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_changeSupplier__c</fullName>
        <label>Change Supplier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_companymaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Company Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_componentpricemaint__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component Price Maint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_confcomp__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selection Component</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_confexcl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selection Exclusion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_confgroup__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Configuration Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_confrec__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selection Recommendation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_confreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selection Requirement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_confsel__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Group Selection</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_confsess__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product Configurator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_consolidatedWorkOrderPicklist__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consolidated Work Order Picklist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_consreqproc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Consolidated Requisition Review and Proc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_container__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Container</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_containertype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Container Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_copysimcoststostd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Set Standard Costs from Simulated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_costaccountingcontrolrecord__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cost Accounting Control Record</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_costacctusercontrolrecord__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cost Acct User Control Record</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_costedbomreport__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Costed BOM Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_costtransactionquery__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cost Transaction Query</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_createplannedtransferpicklist__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Planned Transfer Picklist</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_crtshpinvs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Create Invoice for All Shippers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_csg__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>CSG</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_currencymaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Currency Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_custclassproddisc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer Class Product Discount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_custclassprodgrpdisc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer Class Product Group Discounts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_custmsa__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer MSA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_customerclass__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_customerproductprice__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_customers__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_custprodgrpdiscounts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer Product Group Discounts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_cyclecount__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cycle Count</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_cyclecountreport__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cycle Count Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_derivepurchmtlcostsfrompoactivity__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Derive Purch Mtl Costs from PO Activity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_detailedmrpbyitem__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Detailed Review by Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_dimensionsourceoverride__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dimension Source Override</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_disassemblycompdisposition__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Disassembly Comp Disposition</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_disassemblyreqmaint__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Disassembly Req Maint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_divisionaddress__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_divisionmaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_divisiontodivisiontransfer__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division to Division Transfer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_drplog__c</fullName>
        <label>DRP Log</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_dwocst__c</fullName>
        <label>New Disassembly Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_ecomaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ECO Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_ecoreasons__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ECO Reasons</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_employees__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Employees</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_engbomcopy__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Engineering BOM Copy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_engbommassadd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Engineering BOM Mass Add</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_engbommassreplace__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Engineering BOM Mass Replace</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_engbommaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Engineering BOM Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_engbomqueryedit__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Engineering BOM Query/Edit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_engrevisionsedit__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Engineering Revisions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_fastforecastentry__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Fast Entry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_faxtemplates__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Fax Templates</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_fcstcal__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Calendar</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_fcstcntl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Control</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_featcat__c</fullName>
        <label>Feature Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_fifocostrecord__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>FIFO Cost Record</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_fobcodes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>FOB Codes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_forecastdemand__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Demand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_forecastimport__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Forecast Import</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_freighttermcodes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Freight Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_generaljournal__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>General Journal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_generaljournalexport__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>General Journal Export</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_generateRecurringBilling__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Generate Recurring Billing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_generateapplysimulatedrollupcosts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Generate/Apply Simulated Rollup Costs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_glaccounts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>GL Accounts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_groupapprovallevels__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Group Approval Levels</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_ibconttype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inbound Shipment Container Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_ibroute__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inbound Shipment Route</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_ibrtetype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inbound Shipment Route Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_ibship__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inbound Shipment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icdhr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Device History Record</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icinvrecon__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Reconciliation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icinvreconreviewandprocessing__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inv Reconciliation Review &amp; Processing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icitemprojprice__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Project Prices</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icitemsiteproj__c</fullName>
        <label>Inventory By Item/Site/Project</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icitemss__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item Supersession</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icitemval__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Valuations by Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icixr__c</fullName>
        <label>Requirements - ICIXR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icjobcode__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Job Code Maintenance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_iclicplate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory License Plate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icreceptacle__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Receptacle Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icreplenish__c</fullName>
        <label>Replenishment Location Maintenance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icreplenishprocessrequest__c</fullName>
        <label>DRP Processing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icshrtlist__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shortage Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_icsrllink__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Serial Manual Link</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_ictransreq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Planned Transfer Request</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_inboundcontainers__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Chemsource View into Inbound Containers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_indentedbom__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Indented BOM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_inspords__c</fullName>
        <label>Inspection Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_insptempl__c</fullName>
        <label>Inspection Order Template</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_installation__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Installation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_invcommoditycode__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inv Commodity Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_invcyclecountcontrols__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inv Cycle Count Controls</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_inventoryadjust__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Location Adjust</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_inventorybalances__c</fullName>
        <label>Inventory Balances</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_inventorycosttransactions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Cost Transactions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_inventoryitemaccounts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item Accounts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_inventoryitemmaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_inventoryitemstdcosts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item Std Costs</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_inventoryrequisitions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Requisitions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_inventoryscrap__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Scrap</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_inventoryunitcostadjust__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Unit Cost Adjust</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_invitemaveragecostqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item Average Cost / Quantity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_invitemstdcostsreport__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inv Item Std Costs Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_invreconcautogen__c</fullName>
        <description>m_invreconcautogen__c</description>
        <label>Inventory Reconciliation Automatic Gener</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_itemReplenish__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>DRP Location Replenishment Maintenance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_itemUsage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Usage Forecast</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_itembylotnumber__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory By Lot Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_itembyproject__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory By Item/Project</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_itembyserialnumber__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory By Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_itembystockloc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory By Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_itemplanreview__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Planning Review</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_itemstdcostmaint__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Std Cost Maint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_itemusagehistory__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Usage History</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_itemvendormaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor Item Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_laborclockinout__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Time &amp; Quantity Booking</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_labororder__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_laborqtybookingreversal__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Time &amp; Quantity Booking Reversals</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_labreason__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Reason Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_lotserialtracereport__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot / Serial Trace Report</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_massfirm__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Mass Firm</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_massfirmworkorders__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Mass Firm Work Orders</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_menu__c</fullName>
        <label>Site Map-Menu Bar</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mfgaccounts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sub-Ledger Accounts</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mfgdepartments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Mfg Departments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mfgengitemmaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Engineering Item Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mfglaborgrades__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Mfg Labor Grades</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mfgmachinemaster__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Mfg Machine Master</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mfgprocesses__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Mfg Processes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mfgusernumbers__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Manufacturing Users</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mfgworkcenters__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Mfg Work Centers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_miscadjust__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Misc Adjust</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_missinginvitemsforbomcomponents__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Missing Inv Items for BOM Components</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mpsreviewbyitem__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Summary Review by Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mrpactionmsgsearch__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MRP Action Msg Search</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mrpdatasync__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MRP Data Sync</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mrplaunch__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MRP Launch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mrppolicychange__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Global Item MRP Planning Policy Change</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_mrprequirements__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MRP Requirements</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>